K8S/whoami/base/deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "whoami"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "whoami"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "whoami"
    spec:
      serviceAccountName: "whoami"
      automountServiceAccountToken: false
      volumes:
        - name: "tmp"
          emptyDir: {}
      containers:
        - name: "whoami"
          image: "traefik/whoami:latest"
          imagePullPolicy: "IfNotPresent"
          args: ["-port=4000"]
          volumeMounts:
            - name: "tmp"
              mountPath: "/tmp"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 4000
          resources:
            requests:
              memory: "32Mi"
            limits:
              memory: "32Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
