K8S/whoami/base/whoami-deploy.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  namespace: "testing"
  name: "whoami"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "whoami"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "whoami"
    spec:
      serviceAccount: "whoami"
      volumes:
        - name: "tmp"
          emptyDir: {}
      containers:
        - name: "whoami"
          image: "traefik/whoami:latest"
          imagePullPolicy: "IfNotPresent"
          args:
            - "-port=4000"
          volumeMounts:
            - name: "tmp"
              mountPath: "/tmp"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 4000
          resources:
            requests:
              cpu: "10m"
              memory: "15Mi"
            limits:
              cpu: "20m"
              memory: "30Mi"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
