K8S/whoami/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "whoami"
spec:
  selector:
    app.kubernetes.io/name: "whoami"
  ports:
    - name: "http"
      port: 4000
      protocol: "TCP"
      targetPort: "http"
