K8S/whoami/base/whoami-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "whoami"
  name: "whoami"
  annotations:
    cert-manager.io/issuer: "whoami-issuer"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts: ["testing.k3s"]
      secretName: "whoami-cert"
  rules:
    - host: "testing.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "whoami"
                port:
                  number: 4000
